Missed one spacing fix

--- a/packages/global/scss/components/_magazine.scss
+++ b/packages/global/scss/components/_magazine.scss
@@ -9,13 +9,28 @@
 }
 
 .magazine-publication-card-block {
+  &__header {
+    padding-right: 0;
+    padding-left: 0;
+  }
   &__body {
+    padding-right: 0;
+    padding-left: 0;
     .issue-archive-cover {
       margin-bottom: $block-spacer;
     }
   }
 }
-
+.page {
+  &--magazine-issue {
+    .magazine-publication-card-block {
+      &__body {
+        padding-right: 10px;
+        padding-left: 10px;
+      }
+    }
+  }
+}
 .node-list {
   $self: &;
   &--latest-issue {
